Product y Category, act COfiguracion de Cors.